Updated margin on body. Fix: margin was too close to the edge.

--- a/assets/prod/css/master.css
+++ b/assets/prod/css/master.css
@@ -361,7 +361,7 @@ footer a:hover {
    }
 
    main {
-     margin: 0px 10px!important;
+     margin: 0px 15px!important;
    }
  }
 
